# multiplayer_shooter

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp
.cache/clangd/index/: main.cpp.92925C07A5A1FB69.idx
client/: CMakeLists.txt  game.cpp  game.h  main.cpp  player.cpp  player.h
client/.cache/clangd/index/: game.cpp.290CAA7FABC0443D.idx  game.h.C6D39779C0ABC06C.idx  main.cpp.8D0D908C20CDD1BD.idx  player.cpp.729E9BCE1C0B4A83.idx  player.h.8922AE19FFBE0C2C.idx
server/: CMakeLists.txt  server.cpp
